<resources>
    <string name="app_name">Calculator_Lesson4</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_10">0</string>
    <string name="key_11">.</string>
    <string name="key_12">=</string>
    <string name="key_13">/</string>
    <string name="key_14">*</string>
    <string name="key_15">-</string>
    <string name="key_16">+</string>
    <string name="key_change_activity">Change Activity</string>
    <string name="number_activity_1">activity 1</string>
    <string name="number_activity_2">activity 2</string>

</resources>