<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Введите первое число"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Введите второе число"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_1" />

    <EditText
        android:id="@+id/edit_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Результат"
        app:layout_constraintEnd_toEndOf="@id/edit_2"
        app:layout_constraintStart_toStartOf="@id/edit_2"
        app:layout_constraintTop_toBottomOf="@id/edit_2" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_result"

        />

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/edit_result"

        />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_13"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/edit_result"

        />

    <Button
        android:id="@+id/key_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/edit_result"

        />

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1"

        />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_14"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_1"

        />

    <Button
        android:id="@+id/key_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"

        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"

        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"

        app:layout_constraintEnd_toStartOf="@id/key_15"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_15"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_10"

        app:layout_constraintEnd_toStartOf="@id/key_11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button
        android:id="@+id/key_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_11"
        app:layout_constraintEnd_toStartOf="@id/key_12"
        app:layout_constraintStart_toEndOf="@id/key_10"
        app:layout_constraintTop_toBottomOf="@id/key_7"

        />

    <Button
        android:id="@+id/key_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_12"
        app:layout_constraintEnd_toStartOf="@id/key_16"
        app:layout_constraintStart_toEndOf="@id/key_11"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button
        android:id="@+id/key_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_12"
        app:layout_constraintTop_toBottomOf="@id/key_7" />


</androidx.constraintlayout.widget.ConstraintLayout>